k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: tasky, namespace: tasky }
spec:
  replicas: 1
  selector: { matchLabels: { app: tasky } }
  template:
    metadata: { labels: { app: tasky } }
    spec:
      serviceAccountName: tasky-sa
      containers:
      - name: tasky
        image: 307946653798.dkr.ecr.us-west-2.amazonaws.com/wiz-tasky:with-wizexercise
        ports: [{ containerPort: 8080 }]
