k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: tasky-svc, namespace: tasky }
spec:
  type: NodePort
  selector: { app: tasky }
  ports: [{ port: 80, targetPort: 8080 }]
